--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -6,17 +6,27 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 #about a {
-    color: #00ff00;
+    color: #00ced1;
     text-decoration: none;
 }
 #about a:hover {
     color: #255784;
 }
 h1{
-    color: #00ff00;
+    color: #069a9c;
+    margin-bottom: 30px;
 }
 .navbar .img{
-    height: 40%;
+    height: 30%;
+}
+.navbar .navlist{
+    height: 50%;
+}
+.navbar .contact{
+    height: 20%;
+    margin-top: 35px;
+    align-items: center;
+    display: flex;
 }
 .navbar img{
     height: 100%;
@@ -37,7 +47,7 @@ h1{
     font-size: 25px;
 }
 .navbar ul li a.active{
-    color: #00ff00;
+    color: #00ced1;
     cursor: default;
 }
 .navbar ul li a.active:hover{
@@ -58,9 +68,6 @@ h1{
     justify-content: space-between;
     margin: 20px;
 }
-.navbar .navlist{
-    height: 40%;
-}
 .navlist-list ul{
     display: flex;
     flex-direction: column;
@@ -77,14 +84,8 @@ h1{
     position: fixed;
     text-align: center;
     justify-content: flex-start;
-    padding-top: 4%;
+    padding-top: 2%;
     box-shadow: black 0px 2px 10px;
-}
-.navbar .contact{
-    margin-top: 35px;
-    align-items: center;
-    height: 20%;
-    display: flex;
 }
 .navbar .contact a{
     padding: 5px 10px 5px 10px;
@@ -121,6 +122,11 @@ main{
     width: 70%;
     float: right;
 }
+main>p {
+    color: #069a9c;
+    font-weight: 800;
+    font-size: 18px;
+}
 section{
     height: 100vh;
     overflow: hidden;
@@ -128,25 +134,39 @@ section{
     align-items: center;
     font-size: 22px;
 }
-.education .container{
+#skills {
+    height: 120vh;
+}
+#projects {
+    height: 130vh;
+}
+.container{
     width: 100%;
+    padding: 10px 50px;
+}
+.about .container {
+    padding: 0;
 }
 .terakki, .robert{
     width: 100%;
 }
-.education h2{
+.block h2{
     width: 100%;
+    padding: 50px 0 20px 0;
 }
 .skills img{
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
+}
+.skills .tools {
+    margin-top: 60px;
 }
 .skills .tools ul li{
     display: inline;
 }
 .about img{
-    width: 70px;
-    height: 70px;
+    width: 55px;
+    height: 55px;
 }
 .about h1, .about p{
     padding: 0 20px 10px 50px;
@@ -162,40 +182,36 @@ section{
 .about .social-icons{
     padding: 40px 20px 10px 50px;
 }
-.education .container{
-    padding: 0 20px 10px 50px;
-}
-.skills .container{
-    padding: 0 20px 10px 50px;
-}
-.interests .container{
-    padding: 0 20px 10px 50px;
-}
-.education h1{
+.block h1{
     font-size: 40px;
-    margin-bottom: 30px;
 }
-.education h2{
-    padding: 50px 0 20px 0;
+.block h3{
+    padding: 0px 0 20px 0;
 }
-.education h3{
-    padding: 0px 0 40px 0;
+.block p {
+    line-height: 30px !important;
 }
-.skills .workflow ul{
+.date {
+    float: right; 
+    color: #069a9c; 
+    font-size: 20px;
+    margin-right: 35px;
+}
+.skills ul{
     list-style: none;
 }
 .skills .workflow li::before{
     content: "🎯";
 }
-.skills h1{
-    margin-bottom: 50px;
-    font-size: 40px;
+.skills .languages li::before{
+    content: "✅";
 }
 .skills .tool-icons{
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 .skills h3{
-    margin-bottom: 40px;
+    margin-top: 36px;
+    margin-bottom: 24px;
     font-size: 28px;
 }
 .skills img{
@@ -204,17 +220,26 @@ section{
 .skills img :nth-child(5){
     margin:0;
 }
-.skills .workflow ul li{
-    margin-bottom: 15px;
+.skills ul li{
+    margin-bottom: 12px;
 }
-.interests h1{
-    font-size: 40px;
-    margin-bottom: 70px;
-}
-.interests p{
+.experience p{
     font-size: 23px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     line-height: 30px;
+}
+.experience h2 {
+    padding: 30px 0 10px 0;
+}
+.experience h3 {
+    padding: 0px 0 20px 0;
+}
+#experience a, #projects a{
+    color: #00ced1;
+    text-decoration: none;
+}
+#experience a:hover, #projects a:hover {
+    color: #255784;
 }
 @media (max-height:650px){
     .navbar{
@@ -259,7 +284,7 @@ section{
     }
 }
 @media (max-width:905px){
-    #about p,.interests p {
+    #about p,.experience p {
         font-size: 1.2rem;
     }
     .navbar{
