--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -19,7 +19,8 @@ Use '!important! to disregard other conflicts
 */
 h1 {
     color: #069a9c;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 0px;
     font-size: var(--heading) !important;
 }
 
@@ -177,7 +178,7 @@ main>p {
 }
 
 section {
-    height: 100vh !important;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -232,10 +233,6 @@ section {
 .skills img {
     width: 70px;
     height: 70px;
-}
-
-.skills .tools {
-    margin-top: 60px;
 }
 
 .skills .tools ul li {
@@ -350,7 +347,7 @@ section {
 }
 
 .full-menu {
-    height: 100vh;
+    height: 100vh !important;
     width: 100%;
 }
 
@@ -432,19 +429,13 @@ section {
     }
 }
 
-@media (max-height: 650px) {
-    .about, .education, .experience {
-        height: 150vh;
-    }
-
-    .skills, .projects {
-        height: 220vh;
-    }
-}
-
 @media (max-width: 750px) {
     .navlist ul {
-        display: none;
+        display: none !important;
+    }
+
+    .navlist ul.toggle-menu {
+        display: flex !important;
     }
 
     .navlist input {
@@ -522,6 +513,11 @@ section {
     }
 }
 
+@media (max-width: 550px) {
+    .experience, .skills, .projects {
+        height: 150vh;
+    }
+}
 
 
 /* Responsiveness for tablet */
@@ -575,5 +571,12 @@ section {
     main{
         width: 100%;
         float: none;
+    }
+}
+
+/* Responsiveness for desktop */
+@media screen and (max-width: 1280px) and (max-height: 800px) {
+    .experience, .skills, .projects {
+        height: 120vh;
     }
 }
