--- a/src/assets/styles/Manifesto.scss
+++ b/src/assets/styles/Manifesto.scss
@@ -1,19 +1,49 @@
 #manifesto {
     margin: 0;
     text-align: center !important;
+    background-color: rgba(0, 0, 0, 1);
+    p, h1, h2, h3, h4, h5, h6 {
+        padding: 0 1.5em;
+        color: white;
+    }
 
     .about-section {
         display: flex;
         flex-direction: column;
-        background-color: rgba(0, 0, 0, 1);
         padding: 2.5em;
         background-image: url("");
         // background-image: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(115,112,118,0.3));
 
-        p, h1, h2, h3, h4, h5, h6 {
-            color: white;
-            padding: 0 1.5em;
-        }
+       
     }
 
 }
+
+
+.design-manifesto {
+    font-family: Arial, sans-serif;
+    line-height: 1.8;
+    color: #fff;
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+  }
+  
+  .header-image,
+  .content-image {
+    max-width: 100%;
+    margin: 20px 0;
+  }
+    
+  p,
+  li {
+    margin-bottom: 15px;
+  }
+  
+  blockquote {
+    font-style: italic;
+    color: #ccc;
+    border-left: 4px solid #2c3e50;
+    padding-left: 15px;
+  }
+  
